# intimacoes

./: .gitignore  __init__.py  config.yaml  pipinstall.txt  pyproject.toml  requirements.txt  similarity.py
intimacoes/: README.md  __init__.py  pyproject.toml
intimacoes/intimacoes/src/: Home.py
intimacoes/intimacoes/src/auth/: authenticate.py
intimacoes/intimacoes/src/firebase/: __init__.py
intimacoes/intimacoes/src/functions/: similarity.py  tratament_data.py
intimacoes/intimacoes/src/pages/: Repositório.py  Upload.py  Usuários.py
intimacoes/src/: Home.py
intimacoes/src/auth/: authenticate.py
intimacoes/src/firebase/: __init__.py
intimacoes/src/functions/: similarity.py  tratament_data.py
intimacoes/src/pages/: Filtrados.py  Repositório.py  Upload.py  Usuários.py
src/: Home.py
src/auth/: authenticate.py
src/firebase/: __init__.py
src/functions/: similarity.py  styles_pandas.py
src/pages/: Repositório.py  Upload.py  Usuários.py
